listing/filter css / attempt at shift-bug

--- a/react-app/src/components/AllListingsPage/AllListingsPage.css
+++ b/react-app/src/components/AllListingsPage/AllListingsPage.css
@@ -14,7 +14,7 @@
   margin: 0 auto;
 }
 
-.all-listing-image:hover {
+.all-listing-image {
   /* width: 99%; */
   /* height: 500px; */
   object-fit: contain;
@@ -36,8 +36,8 @@
 
 .single-listing-container:hover {
   box-shadow: 0px 7px 12px -5px rgba(0, 0, 0, 0.75);
-  background-color: #84734d;
-  color: white;
+  /* background-color: #84734d; */
+  /* color: #84734d; */
 }
 .all-listings-info-container {
   align-self: flex-start;
